fix(CSS): Fix heading letter spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,7 +40,7 @@ h6 {
   margin: 0;
   font-weight: 600;
   line-height: 1.2;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
   font-family: "DM Serif Display", serif;
 }
 
